--- a/wheyup/index.html
+++ b/wheyup/index.html
@@ -93,6 +93,7 @@
   </tbody>
 </table>
   <p><br><br></p>
+  <h3>A small difference of $0.50 per 100g saves you <em title="">$120</em> over the year (24Kg).</h3>
   <p><a href="http://www">Source</a>.</p>
   
   <h3>Nutritional lables in some countries have a <em title="">15%</em> margin of error.</h3>
